# batch-file-processor

./: .containerignore  .devcontainer.json  .dockerignore  .env.example  .gitignore  AGENTS.md  ALLEDI_CORPUS_README.md  API_CONTRACT_REVIEW.md  API_CONTRACT_REVIEW_SUMMARY.txt  ARCHITECTURE_REFACTORING_DIAGRAM.md  AUDIT_INDEX.txt  AUTOMATIC_MIGRATION_GUIDE.md  BACKWARD_COMPATIBILITY_REPORT.md  BUGFIX_SUMMARY.md  BUILD_GUIDE.md  BUILD_MONITOR.sh  BUILD_READY.md  BUILD_STATUS.md  BUILD_SUMMARY.md  BUILD_TEST_REPORT.md  BUILD_WINDOWS.md  BUILD_WINDOWS_2012R2.md  CHANGES.md  CODE_REVIEW_IMPROVEMENTS.md  COLUMN_USAGE_MATRIX.txt  COMPREHENSIVE_DISPATCH_TESTING.md  CONVERT_BACKENDS_TESTING_COMPLETE.md  CONVERT_TO_TESTING_PLAN.md  CORPUS_INTEGRATION_SUMMARY.md  COVERAGE_IMPROVEMENT_SUMMARY.md  Copilot-Processing.md  DATABASE_COLUMN_SUMMARY.txt  DATABASE_OPTIONAL.md  DATABASE_SAFETY_IMPROVEMENTS.md  DATA_LOSS_AUDIT_REPORT.txt  DOCKER_PATH_TRANSLATION.md  DOCUMENTATION.md  DROP_IN_REPLACEMENT_VERIFICATION.md  Dockerfile  Dockerfile.windows.build  (+213 more)
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/: copilot-instructions.md
.hive/: issues.jsonl  memories.jsonl
.kilocode/: session-id
.ralph/: current-events  current-loop-id  events-20260204-140931.jsonl  events-20260204-141311.jsonl  events-20260204-141332.jsonl  events-20260204-161157.jsonl  events-20260204-161812.jsonl  events-20260204-162755.jsonl  events-20260204-164034.jsonl  events-20260204-171811.jsonl  history.jsonl
archive/: README.md  __init__.py  _dispatch_legacy.py  dispatch_process.py  edi_tweaks.py  mtc_edi_validator.py
backend/: __init__.py  backend_base.py  copy_backend.py  email_backend.py  file_operations.py  ftp_backend.py  ftp_client.py  http_backend.py  http_client.py  main.py  pipeline_executor.py  protocols.py  retry_mixin.py  smtp_client.py
batch-file-processor/: README.md
batch_file_processor/: __init__.py  constants.py  logging_config.py  structured_logging.py
business_logic/: db.py  errors.py  interface_logic.py  logging.py
core/: __init__.py  constants.py  exceptions.py  logging_config.py  structured_logging.py
dispatch/: AGENTS.md  __init__.py  compatibility.py  (+20 more)
(+1085 files in other folders)
